terraform/modules/server_with_rds/main.tf
resource "aws_instance" "_" {
  ami                    = "ami-0f6565c3d5328c913" # <- ap-southeast-1 us-east-2: "ami-0b29b6e62f2343b46" // AMI: ubuntu iso id
  instance_type          = var.instance_type
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.ec2.id]
  subnet_id              = aws_subnet.public.id
  iam_instance_profile   = aws_iam_instance_profile._.name

  tags = {
    Name                = var.namespace
    DeploymentGroupName = var.deployment_group_name
  }

  root_block_device {
    # volume_type = "gp2"
    volume_size = var.volume_size # 120 // EC2 instance size up to 60GB
  }
}

resource "aws_eip" "_" {
  instance = aws_instance._.id
  vpc      = true
}
